# mandelbrot_set

./: CMakeLists.txt  README.md
src/: src.cpp
src/kernels/: array_addition.cl
src/utils/: openCL.hpp  ppm.hpp
